--- a/hw1/SimplePost.html
+++ b/hw1/SimplePost.html
@@ -9,13 +9,13 @@
 
 
 
-<form method="POST" action="http://153.9.224.95:8888">
+<form method="POST" action="http://localhost:8888">
 
 
 	<b>first name</b>&nbsp;</b><input type="text" name="first"><br>
 	<b>last name</b>&nbsp;</b><input type="text" name="last"><br>
 	<input type="submit">
-	
+
 </form>
 
 </body>
